--- a/ArnaldoDiBianco/UserControls/FinestraPersiana1anta.xaml
+++ b/ArnaldoDiBianco/UserControls/FinestraPersiana1anta.xaml
@@ -7,7 +7,7 @@
              xmlns:vm="clr-namespace:ArnaldoDiBianco.ViewModels"
 						 xmlns:design="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="500">
+             d:DesignHeight="200" d:DesignWidth="550">
 
 	<UserControl.DataContext>
 		<vm:FinestraPersiana1antaViewModel/>
@@ -66,13 +66,15 @@
 				<Run Text="{Binding Compensatore}" Foreground="#F5A5"/>
 				<Run Text=")" Foreground="#F5A5"/>
 			</TextBlock>
-			<TextBlock Grid.Row="6" Grid.Column="0" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
-								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Portalamelle 1 coppia:"/>
-			<TextBlock Grid.Row="6" Grid.Column="2" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
+			<TextBlock Grid.Row="6" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
+								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Portalamelle:"/>
+			<TextBlock Grid.Row="6" Grid.Column="2" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
-				<Run Text="{Binding Portalamelle1coppiaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
-				<Run Text="{Binding Portalamelle1coppia}" Foreground="#F5A5"/>
+				<Run Text="{Binding Quantita, Mode=OneWay}"/>
+				<Run Text=" x " Foreground="#F5A5"/>
+				<Run Text="{Binding Portalamelle1coppia6, Mode=OneWay}" Foreground="#F5A5"/>
+				<Run Text=" (" Foreground="#F5A5"/>
+				<Run Text="{Binding Portalamelle1coppia, Mode=OneWay}" Foreground="#F5A5"/>
 				<Run Text=")" Foreground="#F5A5"/>
 			</TextBlock>
 			<TextBlock Grid.Row="8" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
