--- a/ArnaldoDiBianco/UserControls/FinestraPersiana2ante.xaml
+++ b/ArnaldoDiBianco/UserControls/FinestraPersiana2ante.xaml
@@ -48,27 +48,27 @@
 			<TextBlock Grid.Row="0" Grid.Column="2" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding TelaioX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Telaio}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="2" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Anta:"/>
 			<TextBlock Grid.Row="2" Grid.Column="2" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding AntaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Anta}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="4" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Compensatore:"/>
 			<TextBlock Grid.Row="4" Grid.Column="2" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding CompensatoreX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Compensatore}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="6" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Portalamelle:"/>
@@ -77,144 +77,144 @@
 				<Run Text="{Binding Quantita2, Mode=OneWay}"/>
 				<Run Text=" x " Foreground="#F5A5"/>
 				<Run Text="{Binding Portalamelle2coppie6, Mode=OneWay}" Foreground="#F5A5"/>
-				<Run Text=" (" Foreground="#F5A5"/>
+				<!--<Run Text=" (" Foreground="#F5A5"/>
 				<Run Text="{Binding Portalamelle2coppie, Mode=OneWay}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="8" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Mezza lamella:"/>
 			<TextBlock Grid.Row="8" Grid.Column="2" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding MezzaLamellaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding MezzaLamella}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="10" Grid.Column="0" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Lamella:"/>
 			<TextBlock Grid.Row="10" Grid.Column="2" Style="{StaticResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding LamellaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Lamella}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="0" Grid.Column="4" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="40 x 20:"/>
 			<TextBlock Grid.Row="0" Grid.Column="6" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding _40X20X, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding _40X20}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="2" Grid.Column="4" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Squadrette:"/>
 			<TextBlock Grid.Row="2" Grid.Column="6" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding SquadretteX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Squadrette}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="4" Grid.Column="4" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Cerniere:"/>
 			<TextBlock Grid.Row="4" Grid.Column="6" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding CerniereX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Cerniere}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="6" Grid.Column="4" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Rolli:"/>
 			<TextBlock Grid.Row="6" Grid.Column="6" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding RolliX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Rolli}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="8" Grid.Column="4" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Guarnizione:"/>
 			<TextBlock Grid.Row="8" Grid.Column="6" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding GuarnizioneX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Guarnizione}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="10" Grid.Column="4" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Asta:"/>
 			<TextBlock Grid.Row="10" Grid.Column="6" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding AstaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Asta}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="0" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Incontro asta:"/>
 			<TextBlock Grid.Row="0" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding IncontroAstaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding IncontroAsta}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="2" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Cremonese persiana:"/>
 			<TextBlock Grid.Row="2" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding CremonesePersianaX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding CremonesePersiana}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="4" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Puntali:"/>
 			<TextBlock Grid.Row="4" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding PuntaliX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Puntali}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="6" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="T di riporto:"/>
 			<TextBlock Grid.Row="6" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding TdiRiportoX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding TdiRiporto}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="8" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Catenacci:"/>
 			<TextBlock Grid.Row="8" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding CatenacciX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Catenacci}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="10" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Coppia tappi T di r.:"/>
 			<TextBlock Grid.Row="10" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding CoppiaTappiTdiRX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding CoppiaTappiTdiR}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 			<TextBlock Grid.Row="12" Grid.Column="8" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Text="Regolatori:"/>
 			<TextBlock Grid.Row="12" Grid.Column="10" Style="{DynamicResource MaterialDesignSubtitle1TextBlock}"
 								 VerticalAlignment="Center" FontWeight="Black">
 				<Run Text="{Binding RegolatoriX, Mode=OneWay}"/>
-				<Run Text="  (" Foreground="#F5A5"/>
+				<!--<Run Text="  (" Foreground="#F5A5"/>
 				<Run Text="{Binding Regolatori}" Foreground="#F5A5"/>
-				<Run Text=")" Foreground="#F5A5"/>
+				<Run Text=")" Foreground="#F5A5"/>-->
 			</TextBlock>
 		</Grid>
 	</design:Card>
